<resources>
    <string name="app_name">车邻邦</string>
    <string name="i_known">我知道了</string>
    <string name="authorization_success">授权成功</string>
    <string name="authorization_fail">授权失败</string>
    <string name="please_grant_file_location_phone_correation_authority">请授予文件读写、定位及电话等相关的权限</string>
    <string name="digits_indentify_number">0123456789X</string>
    <string name="load_progress_tips">正在加载…</string>
    <string name="uploading_image">上传中…</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="text_language">语言</string>
    <string name="text_login">登录</string>
    <string name="text_forget_pwd">忘记密码?</string>
    <string name="text_tips">还没账号? </string>
    <string name="text_reg">注册</string>
    <string name="hint_text_phone">请输入手机号</string>
    <string name="hint_text_pwd">请输入密码</string>
    <string name="login_title">车邻邦</string>
    <string name="empty_phone">手机号不能为空</string>
    <string name="error_phone">手机号为11位数字</string>
    <string name="empty_password">密码不能为空</string>
    <string name="password_length_tips">密码至少为8位</string>
    <string name="error_password">密码必须为数字和字母的组合</string>
    <string name="old_error_password">旧密码必须为数字和字母的组合</string>
    <string name="new_error_password">新密码必须为数字和字母的组合</string>
    <string name="no_network_tips">手机未联网,请联网后重试</string>
    <string name="login_failed">登录失败</string>
    <string name="phone_no_register_tips">手机号未注册</string>
    <string name="password_error_tips">密码错误</string>
    <string name="hint_text_code">请输入验证码</string>
    <string name="btn_text_send_code">获取验证</string>
    <string name="btn_text_send_code_repeat">再次获取</string>
    <string name="btn_text_submit">提交</string>
    <string name="tips">我已详细阅读并同意</string>
    <string name="text_protocal">《共享经济合作伙伴协议》</string>
    <string name="register_failed_tips">注册失败</string>
    <string name="register_success_tips">注册成功</string>
    <string name="valid_code_error_tips">验证码错误</string>
    <string name="phone_has_register_tips">手机号已被注册</string>
    <string name="time_tips">秒</string>
    <string name="find_password">找回密码</string>
    <string name="hint_phone">+86手机号</string>
    <string name="hint_code">请输入验证码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="code_tips">验证码已以短信形式发送到您的手机中,请注意查收</string>
    <string name="next_btn_text">下一步</string>
    <string name="repeat_get_text">再次获取</string>
    <string name="code_length_tips">验证码的长度为6位</string>
    <string name="second_text">秒</string>
    <string name="reset_pwd">重置密码</string>
    <string name="reset_tips">需要数字 字母或符号</string>
    <string name="empty_code">验证码不能为空</string>
    <string name="failed_code">发送验证码失败</string>
    <string name="send_code_success">验证码已发送</string>
    <string name="reset_failed">重置密码失败</string>
    <string name="reset_success">重置密码成功</string>
    <string name="modify_pwd">修改密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="old_empty_tips">旧密码不能为空</string>
    <string name="new_empty_tips">新密码不能为空</string>
    <string name="old_length_tips">旧密码长度不能小于8位</string>
    <string name="new_length_tips">新密码长度不能小于8位</string>
    <string name="modify_pwd_success">修改密码成功</string>
    <string name="modify_pwd_failed">修改密码失败</string>
    <string name="old_pwd_error_tips">原密码错误</string>
    <string name="authorize_progress_title">认证进度</string>
    <string name="authorize_status_text">审核状态:</string>
    <string name="failed_reason_text">失败原因:</string>
    <string name="authorize_IN_VERIFICATION">正在审核</string>
    <string name="authorize_REJECTED">失败</string>
    <string name="authorize_info">认证信息</string>
    <string name="skill_project_text">技能项目:</string>
    <string name="bank_number_text">银行卡号:</string>
    <string name="card_number_photo">手持身份证正面照</string>
    <string name="change_authorize_info">更改认证信息</string>
    <string name="get_info_failed">获取信息失败</string>
    <string name="please_verify_bank_card_number">＊请仔细核对银行卡号</string>
    <string name="again_to_exit">再按一次退出应用</string>
    <string name="text_distance">距离：</string>
    <string name="tab_one_text">+合作人</string>
    <string name="tab_two_text">开始工作</string>
    <string name="work_timer">工作时间:</string>
    <string name="memo_text">工作备注:</string>
    <string name="no_network_error">网络异常</string>
    <string name="error_key_tips">key校验失败</string>
    <string name="no_result_tips">未搜索到结果</string>
    <string name="search_text">搜索</string>
    <string name="assure_text">确定</string>
    <string name="contact_text">合作人:</string>
    <string name="receiver_text">已接单</string>
    <string name="invitation_rejected">已拒绝</string>
    <string name="send_invitation">待确认</string>
    <string name="start_work_failed">开始工作失败</string>
    <string name="request_failed">请求失败</string>
    <string name="drop_order">放弃</string>
    <string name="processing">处理中…</string>
    <string name="not_found_order_tips">未找到订单</string>
    <string name="order_drop_successful">订单已放弃</string>
    <string name="add_contact_failed">添加失败</string>
    <string name="no_contact_tips">没有查询到合作人</string>
    <string name="refresh_more">向上滑动加载更多</string>
    <string name="hint_text_phone_name">请输入手机号或姓名</string>
    <string name="content_text_tips">手机号或姓名不能为空</string>
    <string name="invite_contact_failed">邀请合作人失败</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="has_load_all_label">已加载全部</string>
    <string name="work_model_text">工作模式</string>
    <string name="distance_text">距离门店</string>
    <string name="sign_in_text">签到</string>
    <string name="not_arrive_text">还未到达,不能签到噢</string>
    <string name="arrive_text">到达门店? 签到开始工作吧!</string>
    <string name="sign_in_failed">签到失败</string>
    <string name="sign_in_success">签到成功</string>
    <string name="indent_image_text">订单图片</string>
    <string name="work_time">预约施工时间：</string>
    <string name="work_notes">下单备注：</string>
    <string name="receive_indent">我要接单</string>
    <string name="start_authorization">我要认证</string>
    <string name="authorization_progress">认证进度</string>
    <string name="order_type">订单类型：</string>
    <string name="create_order_people">下单人员：</string>
    <string name="shops_location">商户位置：</string>
    <string name="shops_name">商户名称：</string>
    <string name="name">姓名</string>
    <string name="identify_number">身份证号</string>
    <string name="skill_item">技能项目</string>
    <string name="skill_item_1">隔热层</string>
    <string name="skill_item_2">隐型车衣</string>
    <string name="skill_item_3">车身改色</string>
    <string name="skill_item_4">美容清洁</string>
    <string name="identify_photo">身份证正面照</string>
    <string name="bank_card_info">银行卡信息</string>
    <string name="bank_number">本人银行卡号</string>
    <string name="submit">提交</string>
    <string name="authorize_agreement_1">点击“提交”代表您已阅读并同意</string>
    <string name="authorize_agreement_2">《车邻邦技师认证协议》</string>
    <string name="authorize_agreement">认证协议</string>
    <string name="name_error">姓名不能为空</string>
    <string name="identify_number_error">身份证号不能为空</string>
    <string name="reference_not_null">推荐人号码不能为空</string>
    <string name="bank_number_error">银行卡号不能为空</string>
    <string name="skill_item_empty">请至少选择一项技能项</string>
    <string name="order_mode">接单模式</string>
    <string name="unfinished_order_number">未完成的订单数：</string>
    <string name="today_finish_order_number">今日完成订单数：</string>
    <string name="amount">共计金额：</string>
    <string name="uninstalled_sdcard">您的手机未安装SD卡</string>
    <string name="upload_image_failed">上传失败，请重试一次</string>
    <string name="please_check_identify">请检查身份证号</string>
    <string name="operate_failed_agen">操作失败，请重试一次</string>
    <string name="my_info_text">我的信息</string>
    <string name="good_rank_rate">好评率</string>
    <string name="package_text">钱包</string>
    <string name="cost_text">余额(￥)</string>
    <string name="order_num_text">账单(条)</string>
    <string name="order_number_text">订单数</string>
    <string name="my_order_text">我的订单</string>
    <string name="modify_pwd_text">修改密码</string>
    <string name="logout_text">退出登录</string>
    <string name="requirement_id_photo">审核需要身份证照片</string>
    <string name="network_exception">网络异常</string>
    <string name="rest_money_title">余额</string>
    <string name="money_tips">元</string>
    <string name="pay_bottom_tips">每月底为车邻邦平台结算时间</string>
    <string name="banned">账户已被禁用</string>
    <string name="modify_bank_number_text">修改银行卡信息</string>
    <string name="bank_title">银行卡</string>
    <string name="bank_info_text">银行卡信息</string>
    <string name="modify_bankcard_info_tips">修改银行卡信息失败</string>
    <string name="modify_bankcard_info_success">修改成功</string>
    <string name="bill_title">账单</string>
    <string name="info_load_failure">信息加载失败</string>
    <string name="again_authorization">再次认证</string>
    <string name="unpay_text">未结算</string>
    <string name="pay_text">已结算</string>
    <string name="bill_detail">账单详情</string>
    <string name="bill_order_picture">订单图片</string>
    <string name="order_time_text">施工时间:</string>
    <string name="work_item_text">施工部位:</string>
    <string name="year_text">年</string>
    <string name="qulify_cetification">资格认证</string>
    <string name="free_training">免费培训</string>
    <string name="service_center">服务中心</string>
    <string name="message_notification">消息通知</string>
    <string name="more_title">更多</string>
    <string name="skill_project">能力项目:</string>
    <string name="cetification_degree">认证等级:</string>
    <string name="cetification_day">认证日期:</string>
    <string name="cetification_other">其他:</string>
    <string name="skill_text">技能:</string>
    <string name="time_text">时间:</string>
    <string name="address_text">地点:</string>
    <string name="content_text">内容:</string>
    <string name="telphone_str">电话:</string>
    <string name="email_str">邮箱:</string>
    <string name="address_str">地址:</string>
    <string name="into_order">进入订单</string>
    <string name="order_serial_number">订单编号：</string>
    <string name="order_time">预约施工时间 </string>
    <string name="immediate_order">立即抢单</string>
    <string name="immediate_order_failed">抢单失败</string>
    <string name="immediate_order_success">抢单成功</string>
    <string name="order_canceled">订单已取消</string>
    <string name="loading_data_failure">数据加载失败</string>
    <string name="order_taken_up">已有人抢单</string>
    <string name="preview_order">查看订单</string>
    <string name="work_make_time">已用时:</string>
    <string name="default_time">0分0秒</string>
    <string name="upload_work_photo">上传未开始工作前车辆照片</string>
    <string name="less_three_page_tips">不少于3张</string>
    <string name="next_btn">继续</string>
    <string name="finish_mode_text">即将完成模式</string>
    <string name="no_pic_tips_work_before">请上传不少于3张工作前的照片</string>
    <string name="no_pic_tips_work_after">请上传不少于3张工作后的照片</string>
    <string name="upload_work_before_failed_tips">上传施工前图像失败</string>
    <string name="choose_work_item_text">选择本次负责的工作项</string>
    <string name="five_car_tab_text">五座车</string>
    <string name="seven_car_tab_text">七座车</string>
    <string name="finish_btn">完成工作</string>
    <string name="operate_failed_tips">操作失败</string>
    <string name="tv_hour">时</string>
    <string name="tv_minute">分</string>
    <string name="tv_second">秒</string>
    <string name="compute_percent_tips">按百分比计算(%)</string>
    <string name="please_chooice_work_item">请选择本次完成的工作项</string>
    <string name="no_response_to_partners">合作人暂无回应</string>
    <string name="continue_wait">继续等待</string>
    <string name="force_start">强制开始</string>
</resources>