<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50">
        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp15"
            android:textColor="@color/line_color"
            android:text="@string/text_language"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp20"
            android:clickable="true"
            android:focusable="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp10"
        android:paddingRight="@dimen/dp10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp25"
                android:textColor="@color/main_orange"
                android:text="@string/login_title" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp15"
                android:textColor="@color/darkgray"
                android:text="AUTOBON" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60"
            android:layout_marginTop="@dimen/dp20">
            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:src="@mipmap/img_account"
                android:scaleType="centerInside"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:background="@null"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp45"
                android:layout_toRightOf="@+id/iv_phone"
                android:inputType="number"
                android:maxLength="11"
                android:hint="@string/hint_text_phone"
                android:layout_centerVertical="true"
                android:textColorHint="@color/lightgray"
                android:textSize="@dimen/sp15"/>
            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:scaleType="centerInside"
                android:src="@mipmap/iv_delete"
                android:layout_marginRight="@dimen/dp20"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignLeft="@id/et_phone"
                android:layout_below="@id/et_phone"
                android:background="@color/line_color"
                android:layout_marginRight="@dimen/dp20"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60">
            <ImageView
                android:id="@+id/iv_pwd"
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:src="@mipmap/img_pwd"
                android:scaleType="centerInside"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:background="@null"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp45"
                android:layout_toRightOf="@+id/iv_pwd"
                android:inputType="textPassword"
                android:maxLength="18"
                android:hint="@string/hint_text_pwd"
                android:layout_centerVertical="true"
                android:textColorHint="@color/lightgray"
                android:textSize="@dimen/sp15"/>
            <ImageView
                android:id="@+id/iv_eye"
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:scaleType="centerInside"
                android:src="@mipmap/eye_hidden"
                android:layout_marginRight="@dimen/dp20"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignLeft="@id/et_pwd"
                android:layout_below="@id/et_pwd"
                android:layout_marginRight="@dimen/dp20"
                android:background="@color/line_color"/>
        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_margin="@dimen/dp20"
            android:paddingTop="@dimen/dp10"
            android:paddingBottom="@dimen/dp10"
            android:text="@string/text_login"
            android:gravity="center"
            android:textSize="@dimen/sp18"
            android:background="@drawable/login_btn_selector"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sp15"
            android:text="@string/text_forget_pwd"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tips"
            android:textSize="@dimen/sp15"/>
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_reg"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="@dimen/sp15"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/dp5"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/ll_bottom"
        android:background="@color/line_color"/>

</RelativeLayout>
