<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_white"
    tools:context=".MainUnauthorizedActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:background="@color/main_orange">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp35"
            android:layout_height="match_parent"
            android:padding="@dimen/dp10"
            android:scaleType="centerInside"
            android:src="@mipmap/default_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp18" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/receive_indent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/receive_indent"
            android:paddingTop="@dimen/dp10"
            android:paddingBottom="@dimen/dp10"
            android:textSize="@dimen/sp15"
            android:gravity="center"
            android:textColor="#dddddd"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#eeeeee"/>
        <TextView
            android:id="@+id/start_authorization"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/start_authorization"
            android:gravity="center"
            android:textSize="@dimen/sp15"
            android:paddingTop="@dimen/dp10"
            android:paddingBottom="@dimen/dp10"
            android:textColor="#a3a3a3"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
