<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:background="@color/main_orange">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp35"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/dp10"
            android:scaleType="centerInside"
            android:src="@mipmap/default_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/dp50"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/dp10"
            android:scaleType="centerInside"
            android:src="@mipmap/emit" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <View
        android:id="@+id/bt_line_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/ll_add_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_text"
            android:textSize="@dimen/sp15"
            android:textColor="@color/darkgray"
            android:layout_marginLeft="@dimen/dp15"/>
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="@dimen/dp70"
            android:layout_height="@dimen/dp30"
            android:textSize="@dimen/sp15"
            android:textColor="@color/darkgray"
            android:layout_marginLeft="@dimen/dp15"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_accept_order"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp15"
            android:textColor="@color/lightgray"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/dp15"
            android:text="@string/receiver_text"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40">

        <LinearLayout
            android:id="@+id/ll_tab_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_add_contact"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tab_one_text"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/sp15" />

            <TextView
                android:id="@+id/begin_work"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/main_orange"
                android:gravity="center"
                android:text="@string/tab_two_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp15" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_begin_work"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/tab_two_text"
            android:textColor="@color/lightgray"
            android:textSize="@dimen/sp15"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>